--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.5",
-    "redux": "^3.6.0"
+    "react-dom": "^15.5.4"
   },
   "devDependencies": {
     "json-server": "^0.10.1",
@@ -17,6 +16,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "api": "json-server --watch db.json --port 3005"
+    "api": "json-server --watch db.json --port 3005 --delay 1000"
   }
 }
